# vzesync

./: .fpm  .gitignore  README.md  project.toml  pyproject.toml  vzesync.py  vzesync.service  vzesync.toml
.github/workflows/: check.yml  package.yml
examples/: config.json  vzesync.service
packaging/: postinst.sh  postremove.sh  preremove.sh
vzesync/: main.py
